--- a/PEC6_Ej_Prac/stock-market/src/app/article/article-new-reactive/article-new-reactive.component.html
+++ b/PEC6_Ej_Prac/stock-market/src/app/article/article-new-reactive/article-new-reactive.component.html
@@ -56,4 +56,6 @@
         </div>
         <button type="submit" class="btn btn-sm btn-success">Crear</button>
     </form>
+
+    <p>{{mensaje}}</p>
 </div>
