--- a/PEC6_Ej_Prac/stock-market/src/app/article/article-list/article-list.component.html
+++ b/PEC6_Ej_Prac/stock-market/src/app/article/article-list/article-list.component.html
@@ -1,5 +1,5 @@
 
-<div *ngFor="let article of articles">
+<div *ngFor="let article of articles$ | async">
 
     <article-item [article]="article"
      (articleChanged)="onArticleChanged($event)"></article-item>
