--- a/PEC6_Ej_Prac/stock-market/src/app/article/article-new-reactive/article-new-reactive.component.html
+++ b/PEC6_Ej_Prac/stock-market/src/app/article/article-new-reactive/article-new-reactive.component.html
@@ -57,5 +57,5 @@
         <button type="submit" class="btn btn-sm btn-success">Crear</button>
     </form>
 
-    <p>{{mensaje}}</p>
+    <p>{{mensaje | uppercase}}</p>
 </div>
