Obtenemos los datos desde el servidor

--- a/PEC6_Ej_Prac/stock-market/src/app/article/article-list/article-list.component.html
+++ b/PEC6_Ej_Prac/stock-market/src/app/article/article-list/article-list.component.html
@@ -1,7 +1,6 @@
 
 <div *ngFor="let article of articles$ | async">
 
-    <article-item [article]="article"
-     (articleChanged)="onArticleChanged($event)"></article-item>
+    <article-item [article]="article"></article-item>
 
 </div>
